# rules_circom

./: .gitignore  Cargo.toml  README.md  WORKSPACE  build_defs.bzl  rules_circom_deps.bzl
examples/: BUILD.bazel  multiplier_3.circom  multiplier_4.circom
examples/multiplier/multiplier_2/: BUILD.bazel
examples/multiplier/multiplier_n/: BUILD.bazel  multiplier_n.circom
