[package]
name = "rules_circom"
version = "0.0.1"
authors = ["The Tachyon Authors <tachyon-discuss@kroma.network>"]
edition = "2021"
rust-version = "1.56.1"
description = """
Bazel rule for circom
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroma-network/rules_circom"
readme = "README.md"
categories = ["cryptography"]
keywords = ["tachyon", "circom", "proofs", "zkp", "zkSNARKs"]
publish = false

[dependencies]
circom = { git = "https://github.com/kroma-network/circom.git", rev = "1b5d13b" }
ansi_term = "0.12.1"
